--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="rel\include\ttyd\evt_hit.h" />
     <ClInclude Include="rel\include\ttyd\evt_item.h" />
     <ClInclude Include="rel\include\ttyd\evt_johoya.h" />
+    <ClInclude Include="rel\include\ttyd\evt_lecture.h" />
     <ClInclude Include="rel\include\ttyd\evt_map.h" />
     <ClInclude Include="rel\include\ttyd\evt_mario.h" />
     <ClInclude Include="rel\include\ttyd\evt_memcard.h" />
@@ -229,6 +230,7 @@
     <ClInclude Include="rel\include\ttyd\party.h" />
     <ClInclude Include="rel\include\ttyd\pmario_sound.h" />
     <ClInclude Include="rel\include\ttyd\seqdrv.h" />
+    <ClInclude Include="rel\include\ttyd\seq_game.h" />
     <ClInclude Include="rel\include\ttyd\seq_logo.h" />
     <ClInclude Include="rel\include\ttyd\seq_mapchange.h" />
     <ClInclude Include="rel\include\ttyd\seq_title.h" />
@@ -236,8 +238,10 @@
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
+    <ClInclude Include="rel\include\ttyd\tou.h" />
     <ClInclude Include="rel\include\ttyd\windowdrv.h" />
     <ClInclude Include="rel\include\ttyd\win_item.h" />
+    <ClInclude Include="rel\include\ttyd\win_log.h" />
     <ClInclude Include="rel\include\ttyd\win_main.h" />
     <ClInclude Include="rel\include\ttyd\win_root.h" />
     <ClInclude Include="rel\include\ug.h" />
