--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -426,6 +426,18 @@
     <ClInclude Include="rel\include\ttyd\battle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_lecture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\seq_game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\tou.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\win_log.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
