--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="rel\include\ttyd\mapdrv.h" />
     <ClInclude Include="rel\include\ttyd\mario.h" />
     <ClInclude Include="rel\include\ttyd\mariost.h" />
+    <ClInclude Include="rel\include\ttyd\mario_cam.h" />
     <ClInclude Include="rel\include\ttyd\mario_motion.h" />
     <ClInclude Include="rel\include\ttyd\mario_party.h" />
     <ClInclude Include="rel\include\ttyd\mario_pouch.h" />
