--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
+    <ClInclude Include="rel\include\ttyd\tik.h" />
     <ClInclude Include="rel\include\ttyd\tou.h" />
     <ClInclude Include="rel\include\ttyd\windowdrv.h" />
     <ClInclude Include="rel\include\ttyd\win_item.h" />
