--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -262,6 +262,7 @@
     <ClInclude Include="rel\subrels\hom\include\subrel_hom.h" />
     <ClInclude Include="rel\subrels\init\include\subrel_main.h" />
     <ClInclude Include="rel\subrels\jin\include\subrel_jin.h" />
+    <ClInclude Include="rel\subrels\jon\include\subrel_jon.h" />
     <ClInclude Include="rel\subrels\kpa\include\subrel_kpa.h" />
     <ClInclude Include="rel\subrels\las\include\subrel_las.h" />
     <ClInclude Include="rel\subrels\moo\include\subrel_moo.h" />
@@ -351,6 +352,7 @@
     <ClCompile Include="rel\subrels\init\source\OWR.cpp" />
     <ClCompile Include="rel\subrels\init\source\StateManager.cpp" />
     <ClCompile Include="rel\subrels\jin\source\main.cpp" />
+    <ClCompile Include="rel\subrels\jon\source\main.cpp" />
     <ClCompile Include="rel\subrels\kpa\source\main.cpp" />
     <ClCompile Include="rel\subrels\las\source\main.cpp" />
     <ClCompile Include="rel\subrels\moo\source\main.cpp" />
