--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -444,6 +444,9 @@
     <ClInclude Include="rel\include\ttyd\tik.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\subrels\jon\include\subrel_jon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -706,6 +709,9 @@
     </ClCompile>
     <ClCompile Include="rel\include\ttyd\gor_02.h">
       <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\subrels\jon\source\main.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
